Add option to disable dash